# wat

./: .gitignore  CMakeLists.txt  Makefile  README-DEV.md  README.md  actor.c  actor.h  background.c  background.h  bullet.c  bullet.h  bullet_manager.c  bullet_manager.h  collision_manager.c  collision_manager.h  config.c  config.h  enemy.c  enemy.h  enemy_manager.c  enemy_manager.h  game.c  game.h  hud.c  hud.h  in_game_state.c  in_game_state.h  input_component.c  input_component.h  input_manager.c  input_manager.h  keys.h  makefile  particle.c  particle.h  particle_manager.c  particle_manager.h  pause_state.c  pause_state.h  player.c  (+22 more)
inc/: bullet.h  bullet_manager.h  particle.h  particle_manager.h  pause_state.h  util.h  wat.h
src/: bullet_manager.c  game.c  in_game_state.c  pause_state.c
test/: tinymt32.c  xoshiro256.c
